--- a/project.ipynb
+++ b/project.ipynb
@@ -21,7 +21,7 @@
    "id": "2871faa9",
    "metadata": {},
    "source": [
-    "ye vala part ko Gpu se train karna hai"
+    "Train this part in GPU"
    ]
   },
   {
