--- a/project.ipynb
+++ b/project.ipynb
@@ -493,11 +493,10 @@
    "id": "aec3a442",
    "metadata": {},
    "source": [
-    "yaha tak apna model train karne ka code hai aur iske baad prediction ka \n",
+    "Till now we have trained our model & now we'll be doing prediction from this \n",
     "\n",
-    "abhi prediction ke liye pahale ka model use kar raha hu \n",
     "\n",
-    "abhi jo model use kar raha hu uski acurracy 62 percent hai\n"
+    "The model we are using has an accuracy of 83%\n"
    ]
   },
   {
